# libretto

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release-image.yml  rust-checks.yml
css/: room.css  room_list.css
js/: room_list.js
src/: main.rs  room_list.rs  room_to_html.rs  timeline.rs
templates/: event.html.j2  event_messagelike.html.j2  event_state.html.j2  room.html.j2  room_list.html.j2
