[package]
name = "libretto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
askama = { version = "0.13.1", features = ["serde_json"] }
clap = { version = "4.5.36", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.2"
dirs = "6.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
icu = "1.5.0"
jiff = "0.2.10"
matrix-sdk = { version = "0.11.0", features = ["anyhow"] }
rand = "0.9.0"
regex = "1.11.1"
rpassword = "7.4.0"
ruma = { version = "0.12.2", features = ["html-matrix", "html"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
